--- a/.github/workflows/release-prettier-config.yml
+++ b/.github/workflows/release-prettier-config.yml
@@ -17,7 +17,7 @@ jobs:
         id: publish
         uses: JS-DevTools/npm-publish@v1
         with:
-          token: ${{ secrets.NPM_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           registry: https://npm.pkg.github.com/
           package: packages/prettier-config/package.json
           access: "restricted"
