--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - .github/labels.yml
+      - .github/workflows/sync-labels.yml
 
 jobs:
   build:
