--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fspo/prettier-config",
+  "name": "@lpaths/prettier-config",
   "description": "Prettier config",
   "version": "1.0.0",
   "license": "MIT",
