--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -12,7 +12,7 @@
     "type": "git"
   },
   "publishConfig": {
-    "registry": "@lPaths:registry=https://npm.pkg.github.com"
+    "registry": "@lPaths:registry=https://npm.pkg.github.com/"
   },
   "main": ".prettierrc.json"
 }
