--- a/.github/workflows/release-prettier-config.yml
+++ b/.github/workflows/release-prettier-config.yml
@@ -19,7 +19,7 @@ jobs:
         id: publish
         uses: JS-DevTools/npm-publish@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           registry: https://npm.pkg.github.com/
           package: packages/prettier-config/package.json
 
