Fix publish workflow

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "name": "Phát Mai"
   },
   "repository": {
-    "url": "https://github.com/lPaths/packages",
+    "url": "https://github.com/6thpath/packages",
     "type": "git"
   },
   "private": true,
