--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "name": "Phát Mai"
   },
   "repository": {
-    "url": "https://github.com/6thpath/packages",
+    "url": "https://github.com/6thpath/packages.git",
     "type": "git"
   },
   "engines": {
