--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "engines": {
     "node": ">=14"
   },
+  "scripts": {
+    "postinstall": "lerna bootstrap"
+  },
   "devDependencies": {
     "lerna": "^4.0.0"
   }
