--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "postinstall": "lerna bootstrap"
+    "postinstall": "lerna bootstrap --ci"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
