--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,9 @@
 {
   "recommendations": [
-    "rvest.vs-code-prettier-eslint"
+    "bradlc.vscode-tailwindcss",
+    "rvest.vs-code-prettier-eslint",
+    "esbenp.prettier-vscode",
+    "aaron-bond.better-comments",
+    "shardulm94.trailing-spaces"
   ]
 }
