--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@6thpath/design-system",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "license": "GNU GPL V3.0",
   "author": {
     "email": "tienphat1501@gmail.com",
@@ -22,6 +22,7 @@
     "node": ">=14"
   },
   "scripts": {
+    "compile": "tsc",
     "lint": "eslint '**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
@@ -42,7 +43,8 @@
     "@6thpath/eslint-config": "^1.0.4",
     "eslint": "7.32.0",
     "husky": "7.0.2",
-    "lint-staged": "11.2.0"
+    "lint-staged": "11.2.0",
+    "typescript": "4.4.3"
   },
   "eslintConfig": {
     "root": true,
