--- a/.github/workflows/release-design-system.yml
+++ b/.github/workflows/release-design-system.yml
@@ -23,6 +23,8 @@ jobs:
           cache: "yarn"
       - run: yarn install
         working-directory: packages/design-system
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - run: yarn compile
         working-directory: packages/design-system
 
