--- a/.github/workflows/release-design-system.yml
+++ b/.github/workflows/release-design-system.yml
@@ -21,16 +21,17 @@ jobs:
         with:
           node-version: "14"
           cache: "yarn"
+          registry-url: https://npm.pkg.github.com/
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Setup and compile Typescript types
         run: |
-          echo "always-auth=true" > ~/.npmrc
-          echo "@6thpath:registry=https://npm.pkg.github.com/" > ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.PERSONAL_ACCESS_TOKEN }}" > ~/.npmrc
-
           yarn install
           yarn compile
         working-directory: packages/design-system
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Publish
         id: publish
