--- a/web/design-system-demo/package.json
+++ b/web/design-system-demo/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@6thpath/design-system": "^1.0.2",
+    "@6thpath/design-system": "^2.0.3",
     "next": "11.1.2",
+    "postcss-import": "^14.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
