Replace lerna with yarn workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,4 +23,7 @@
   "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[markdown]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
