--- a/.github/workflows/release-design-system.yml
+++ b/.github/workflows/release-design-system.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Setup and compile Typescript types
         run: |
-          yarn install
+          yarn install --focus --frozen-lockfile
           yarn compile
         working-directory: packages/design-system
         env:
