--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "css.lint.unknownAtRules": "ignore",
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -25,5 +26,5 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
+  }
 }
