--- a/.github/workflows/release-eslint-config.yml
+++ b/.github/workflows/release-eslint-config.yml
@@ -55,7 +55,7 @@ jobs:
           tag_name: eslint-config-v${{ steps.publish.outputs.version }}
           body: |
             Version ${{ steps.publish.outputs.version }}
-          draft: true
+          draft: false
           prerelease: false
 
       - name: Log release URL
