--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -9,7 +9,8 @@ on:
       - .github/workflows/sync-labels.yml
 
 jobs:
-  build:
+  sync:
+    name: Sync Labels
     runs-on: ubuntu-latest
 
     steps:
