--- a/web/design-system-demo/package.json
+++ b/web/design-system-demo/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "static": "next build && next export -o build -s",
+    "serve": "serve -s build"
   },
   "dependencies": {
     "@6thpath/design-system": "^2.0.4",
