--- a/.github/workflows/deploy-dsd-preview-site.yml
+++ b/.github/workflows/deploy-dsd-preview-site.yml
@@ -57,7 +57,7 @@ jobs:
 
     steps:
       - name: checkout
-        uses: actions/checkout@2
+        uses: actions/checkout@v2
 
       - name: Build
         id: build
