--- a/.github/workflows/deploy-dsd-preview-site.yml
+++ b/.github/workflows/deploy-dsd-preview-site.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Deploy preview site to Surge
         working-directory: web/design-system-demo
         run: |
-          export DEPLOY_DOMAIN=https://preview-${{ github.event.number }}-dsd.surge.sh
+          export DEPLOY_DOMAIN=https://dsd-${{ github.event.number }}-preview.surge.sh
           npx surge --project ./build --domain $DEPLOY_DOMAIN --token ${{ secrets.SURGE_TOKEN }}
 
       - name: Upload site artifact
@@ -69,20 +69,20 @@ jobs:
     name: Update Deployment Status
     runs-on: ubuntu-latest
     needs: deploy
-    if: always() && needs.deploy.result != 'failure'
 
     steps:
       - name: Update comment status
+        if: needs.deploy.result != 'failure'
         uses: actions-cool/maintain-one-comment@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
-            [:white_check_mark:  Preview site deployment succeeded](https://dsd-${{ github.event.number }}-preview.surge.sh)
+            :white_check_mark:  ![Preview site deployment succeeded](https://dsd-${{ github.event.number }}-preview.surge.sh)
             <!-- PR_AUTO_PREVIEW -->
           body-include: "<!-- PR_AUTO_PREVIEW -->"
 
       - name: The job has failed
-        if: ${{ failure() }}
+        if: needs.deploy.result == 'failure'
         uses: actions-cool/maintain-one-comment@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
