--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,6 @@
 yarnPath: .yarn/releases/yarn-3.0.2.cjs
 nodeLinker: node-modules
 nmHoistingLimits: none
+npmScopes:
+  6thpath:
+    npmRegistryServer: "https://npm.pkg.github.com/"
