--- a/.github/workflows/deploy-dsd-preview-site.yml
+++ b/.github/workflows/deploy-dsd-preview-site.yml
@@ -47,9 +47,17 @@ jobs:
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
+      - name: Restore Next cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/web/design-system-demo/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+
       - name: Build
         working-directory: web/design-system-demo
         run: |
+          npx next telemetry disable
           yarn static
 
       - name: Deploy preview site to Surge
