--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@6thpath/design-system",
-  "version": "2.0.5",
+  "version": "3.0.0",
   "license": "GNU GPL V3.0",
   "author": {
     "email": "tienphat1501@gmail.com",
@@ -19,8 +19,7 @@
     "*"
   ],
   "exports": {
-    ".": "./index.js",
-    "./": "./css/"
+    ".": "./index.js"
   },
   "engines": {
     "node": ">=14"
@@ -30,23 +29,23 @@
     "lint": "eslint '**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
-    "@ctrl/tinycolor": "3.4.0",
-    "@tailwindcss/forms": "0.3.4",
-    "@tailwindcss/line-clamp": "0.2.2",
-    "@tailwindcss/postcss7-compat": "2.2.17",
-    "autoprefixer": "9.8.8",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/line-clamp": "^0.2.2",
+    "autoprefixer": "10.4.0",
     "deepmerge": "4.2.2",
-    "postcss": "7.0.39",
-    "postcss-custom-properties": "10.0.0",
-    "postcss-import": "12.0.1",
-    "postcss-nested": "4.2.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.2.17"
+    "postcss": "8.3.11",
+    "postcss-custom-properties": "12.0.0",
+    "postcss-import": "14.0.2",
+    "postcss-nested": "5.0.6",
+    "tailwindcss": "2.2.19"
   },
   "devDependencies": {
     "@6thpath/eslint-config": "^1.0.5",
+    "@types/tailwindcss": "^2.2.3",
     "eslint": "7.32.0",
-    "husky": "7.0.2",
-    "lint-staged": "11.2.3",
+    "husky": "7.0.4",
+    "lint-staged": "11.2.6",
     "typescript": "4.4.4"
   },
   "eslintConfig": {
@@ -54,7 +53,6 @@
     "extends": "@6thpath/eslint-config/common",
     "ignorePatterns": "dist/**/*"
   },
-  "prettier": "@6thpath/prettier-config",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
