--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@6thpath/eslint-config",
   "description": "Eslint config",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "license": "MIT",
   "author": {
     "email": "tienphat1501@gmail.com",
@@ -9,7 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/6thpath/packages.git"
+    "url": "https://github.com/6thpath/packages.git",
+    "directory": "packages/eslint-config"
+  },
+  "bugs": {
+    "url": "https://github.com/6thpath/packages/issues"
   },
   "publishConfig": {
     "@6thpath:registry": "https://npm.pkg.github.com/"
@@ -17,18 +21,14 @@
   "main": "typescript.js",
   "dependencies": {
     "@6thpath/prettier-config": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "deepmerge": "4.2.2",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.4.1"
-  },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "typescript": "4.4.4"
   },
   "peerDependencies": {
     "eslint": ">=7",
