--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -9,7 +9,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/6thpath/packages.git"
+    "url": "https://github.com/6thpath/packages.git",
+    "directory": "packages/prettier-config"
   },
   "publishConfig": {
     "@6thpath:registry": "https://npm.pkg.github.com/"
